19715
{noformat}
% scalac-hash 46e8eceecc5b5f6b49075550e54f035126fc256a sandbox/test.scala
sandbox/test.scala:9: error: kinds of the type arguments (Proxy[PP]) do not conform to the expected kinds of the type parameters (type P) in class Stuff.
Proxy[PP]'s type parameters do not match type P's expected parameters:
trait Proxy has one type parameter, but type P has one
case class Stuff[+P[PP <: Proxiable] <: Proxy[PP]](content: P[Data])
           ^
one error found
% ~/code/scala scalac-hash 46e8eceecc5b5f6b49075550e54f035126fc256a~1 sandbox/test.scala
% ~/code/scala cat sandbox/test.scala
{noformat}
{code}
import scala.language.higherKinds
trait Proxiable {
  def source: String
}
trait Proxy[+T <: Proxiable] {
  def source: String
}
case class Data(source: String) extends Proxiable
case class Stuff[+P[PP <: Proxiable] <: Proxy[PP]](content: P[Data])
{code}

Reported: https://groups.google.com/forum/#!topic/scala-user/QiQ0AvVwYm8
